# SevenZippp

./: CMakeLists.txt  README.md  SevenZip++2013.sln  pack.py
Samples/Simple/: Simple.cpp  Simple_Linux.cpp
SevenZip++/: 7zDefines.h  7zpp.h  ArchiveExtractCallback.cpp  ArchiveExtractCallback.h  ArchiveOpenCallback.cpp  ArchiveOpenCallback.h  ArchiveUpdateCallback.cpp  ArchiveUpdateCallback.h  CMakeLists.txt  CompressionFormat.h  CompressionLevel.h  ConsoleCallback.h  Enum.h  FileInfo.h  FileStream.cpp  FileStream.h  FileSys.cpp  FileSys.h  GUIDs.cpp  GUIDs.h  InStreamWrapper.cpp  InStreamWrapper.h  OutStreamWrapper.cpp  OutStreamWrapper.h  PathScanner.cpp  PathScanner.h  ProgressCallback.cpp  ProgressCallback.h  PropVariant.cpp  PropVariant.h  SevenZip++.vcxproj  SevenZip++2008.vcproj  SevenZip++2013.vcxproj  SevenZipCompressor.cpp  SevenZipCompressor.h  SevenZipException.cpp  SevenZipException.h  SevenZipExtractor.cpp  SevenZipExtractor.h  SevenZipLibrary.cpp  (+3 more)
